# api/server/swagger_server/swagger/swagger.yaml
@@ -15,7 +15,7 @@
 swagger: "2.0"
 info:
   description: "MLX API Extension for Kubeflow Pipelines"
-  version: "0.1.26-bypass-kfp-in-docker-compose"
+  version: "0.1.27"  # 0.1.27-pipeline-namespace
   title: "MLX API"
 basePath: "/apis/v1alpha1"
 schemes:
@@ -2910,6 +2910,8 @@ definitions:
           \ is used as default. (In the future, if desired by customers, we can allow\
           \ them to set default version.)"
         readOnly: true
+      namespace:
+        type: "string"
     example:
       name: "name"
       created_at: "2000-01-23T04:56:07.000+00:00"
